Use set of
Signed-off-by: Martin Grześlowski <martin.grzeslowski@gmail.com>